Igniting the app

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </script> -->
 
     <!-- # core of the react will be present in react.development.js -->
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script> -->
 
     <!-- React dom contains components that deals with browser dom -->
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
     <div id="root">
             <h1>I am Srikanth</h1>
             <h1>I am Srikanth</h1>
@@ -29,9 +29,8 @@
             <h1>I am Srikanth</h1>
             <h1>I am Srikanth</h1>
             <h1>I am Srikanth</h1>
-            <script src="./app.js"></script>
     </div>
-        
+        <script type="module" src="./app.js"></script>
 
 
     
