--- a/index.html
+++ b/index.html
@@ -22,13 +22,8 @@
     <!-- React dom contains components that deals with browser dom -->
     <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
     <div id="root">
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
-            <h1>I am Srikanth</h1>
+            <h1>Not Rendered</h1>
+            
     </div>
         <script type="module" src="./app.js"></script>
 
